--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "GMB-client-library",
+    "name": "GMBClientLibrary",
     "type": "library",
     "description": "work with google my business",
     "authors": [
