--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "patilrrohit33/gmb-client-library",
     "type": "library",
-    "description": "work with google my business",
+    "description": "Google my business client library",
     "authors": [
         {
             "name": "Rohit Patil",
