--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "patilrrohit33/gmb-client-library",
     "type": "library",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "description": "Google my business client library",
     "authors": [
         {
